--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  background: linear-gradient(to right, #2c3e50, #3498db);
+  background: linear-gradient(to right, #7F7FD5,#86A8E7,#91eae4);
 }
 
 .App {
@@ -113,21 +113,6 @@ a.navbar-brand{
 }
 
 a.nab-link{
-    color:black;
+    color:royalblue;
     padding-right: 30px;
-
-}
-
-body {
-    background-image: url("https://www.regionofwaterloo.ca/en/health-and-wellness/resources/Images/nCoV1600x642.png");
-    position: relative;
-    opacity: 0.95;
-}
-
-.card-body:hover{
-    opacity: 1.0;
-}
-
-.card-body{
-    opacity: 0.9;
 }
