color fix of update button and added alternative name for image

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,7 @@ body {
     color: #fff;
     float: right;
     background-color: #3554dc;
-    border-color: #dc3545;
+    border-color: #3554dc;
     margin-right: 5px;
 }
 
